opam-version: "2.0"
maintainer: "Sacha Ayoun<sachaayoun@gmail.com>"
authors: "MSR"
homepage: "https://github.com/Z3prover/z3"
bug-reports: "https://github.com/Z3prover/z3/issues"
license: "MIT"
dev-repo: "git+https://github.com/Z3prover/z3.git"
build: [
  [ "python2.7" "scripts/mk_make.py" "--ml" ]
  [ make "-C" "build" "-j" jobs ]
  [ "sh" "-c" "cp build/libz3* build/api/ml/" ]
]
install: [
  [ "sh" "-c" "ocamlfind install z3 build/api/ml/META -nodll build/api/ml/*" ]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "zarith"
  "conf-gmp"
  "conf-python-2-7" {build}
]
synopsis: "Z3 solver"